<resources>
    <!-- Non translatable -->
    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>
    <string name="stop" translatable="false">Stop</string>

    <!-- Translatable -->
    <string name="app_name">Youpidapp</string>
    <string name="home">Accueil</string>
    <string name="type">Type de lecture</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>

    <!-- Discotheque -->
    <string name="type1">1 seul à la fois</string>
    <string name="type2">En même temps</string>
    <string name="type3">Un après l\'autre</string>

    <!-- Buttons -->
    <string name="create_widget">Créer le widget</string>
    <string name="random">Random</string>
    <string name="pilou">Pilou</string>
    <string name="aucune_chance">Aucune chance</string>
    <string name="biiiiiiiyoup">Biiiyoup</string>
    <string name="ca_va_prendre_du_temps">ça va prendre du temps</string>
    <string name="ca_va_vous_faire_mal">ça va vous faire mal</string>
    <string name="charles_pecheur">Charles Pecheur</string>
    <string name="complique">Complique</string>
    <string name="doyen_verleyzen">Doyen Verleyzen</string>
    <string name="elimination">Elimination</string>
    <string name="eliodirupo">Elio di Rupo</string>
    <string name="ils_ont_le_visage_frappe_par_la_douleur">Frappé par la douleur</string>
    <string name="ikea">Ikea</string>
    <string name="il_est_mort">Il est mort</string>
    <string name="it_must_work">It must work</string>
    <string name="jean_didou">Jean Didou</string>
    <string name="le_prof_est_con">Le prof est con</string>
    <string name="minipub">Mini-pub</string>
    <string name="monstre_terrifiant">Monstre terrifiant</string>
    <string name="monstrueusement_long">Monstrueusement long</string>
    <string name="on_aime_pas">On aime pas</string>
    <string name="on_aime_pas_bis">On aime pas!</string>
    <string name="on_va_manger">On va manger</string>
    <string name="pilou_calme">Pilou (calme)</string>
    <string name="pilou_grandiloquent">Pilou (fort)</string>
    <string name="piou_piou">Piou piou</string>
    <string name="piou_piou_triste">Piou piou (triste)</string>
    <string name="plein_plein_plein">Plein plein</string>
    <string name="premiere_ministre">Premier ministre</string>
    <string name="puree">Purée</string>
    <string name="regarder_nouvelles">Regarder</string>
    <string name="t11_minutes">11 minutes</string>
    <string name="t1_minute">1 minute</string>
    <string name="t8_minutes">8 minutes</string>
    <string name="temps_dingue">Temps dingue</string>
    <string name="tintin">Tintin</string>
    <string name="vilain_vilain">Vilain</string>
    <string name="youpidou">Youpidou</string>
    <string name="youpidou_calme">Youpidou (calme)</string>
    <string name="youtube">Youtube</string>
    <string name="youtubehein">Youtube hein</string>
    <string name="youtubepointcom">Youtube.com</string>
    <string name="youtubepointcomhein">Youtube.com hein</string>
    <string name="do_not_worry">Do not Worry</string>
    <string name="mettez_vos_masques">Mettez vos masques</string>
    <string name="ohoui">Oh oui</string>
    <string name="podcast">Podcast</string>
    <string name="singular_matrix">Singular matrix</string>
    <string name="sprouuuuuutch">Sprouuutch</string>
    <string name="t10_minutes">10 minutes</string>
    <string name="voila_voila">Voila voila</string>
    <string name="aiou">Aïou !</string>
    <string name="les_bonnes_series">Bonnes séries</string>
    <string name="donald">Donald</string>
    <string name="electeurs">Electeurs</string>
    <string name="energie_cinetique">Énergie cinétique</string>
    <string name="piece_of_cake">Piece of cake</string>
    <string name="pilou_concentre">Pilou (concentré)</string>
    <string name="pilou_rapide">Pilou (rapide)</string>
    <string name="virus2">Virus 2</string>
    <string name="tu_as_compris_michel">Compris Michel ?</string>
    <string name="fais_confiance">Fais confiance</string>
    <string name="meme_chose">Même chose</string>
    <string name="relax_michel">Relax Michel</string>

    <!-- AboutFragment -->
    <string name="about_title">À propos</string>
    <string name="about_corps_1">
        Pilou pilou bonjour ! On a juste deux mots à vous causer, vous qui avez téléchargé cette app.
        Si vous ne savez pas qui est monsieur Vincent Legat ou ce qu\'est l\'EPL, c\'est que cette application ne vous est peut-être pas destinée !
    </string>

    <string name="about_corps_2">
        Dans le cas contraire, bienvenue !
        Tous les extraits audio disponibles proviennent de vidéos Youtube postées par le Professeur Vincent Legat (non nous ne l\'avons pas enregistré à son insu),
        le lien vers sa chaîne est disponible en dessous.
        Nous tenons également à dire que cette application est à but purement humoristique, nous ne gagnons pas d\'argent grâce à celle-ci.
        Elle n\'a pas non plus été réalisée dans un but de se moquer, bien au contraire ! L\'un d\'entre nous a même été son étudiant pendant plusieurs années.
        Nous aimons beaucoup les cours donnés par monsieur Legat qui sont toujours très vivants et dynamiques, en partie grâce à l\'humour qu\'il apporte.
    </string>

    <string name="about_corps_3">
        Cette application est simplement un hommage à son travail d\'enseignant.
    </string>

    <string name="about_corps_4">
        Si vous nous lisez monsieur, nous espérons que cette app vous ait plu, nous sommes vraiment deux grands fans.
        Nous serions attristés si vous le décidez, mais si vous voulez qu\'on retire l\'application ou certains extraits audio, n\'hésitez pas à nous contacter par mail.
        Si au contraire vous avez des suggestions à faire, n\'hésitez pas non plus à nous en faire part.
    </string>

    <string name="about_corps_5">
        L\'app est complètement open-source sous license GPLv3 à part les extraits audio (et les dessins) qui restent la propriété du Professeur Vincent Legat.
        Vous pouvez contribuer en vous rendant sur le github associé (lien plus bas).
    </string>

    <string name="about_corps_6">
        Des bisous et Youpidou!
    </string>
    <string name="covid">covid</string>

    <!-- Boitefragment -->
    <string name="boite_title">Buzzers</string>
    <string name="boite_title_text">Boites à son aléatoires</string>
    <string name="buzzer_pilou">Pilou</string>
    <string name="buzzer_piou">Piou</string>
    <string name="buzzer_youpidou">Youpidou</string>
    <string name="buzzer_youtube">Youtube</string>
</resources>